--- a/blog/content/1.in-the-name-of-god.md
+++ b/blog/content/1.in-the-name-of-god.md
@@ -1,7 +1,7 @@
 Title: بسم الله الرحمن الرحیم
 Date: 2014-08-03 21:02
 Category: General
-img:http://upload7.ir/imgs/2014-08/76035480791090147826.jpg
+img: vahid.kharazi.net/mirad/GreenMile.jpg
 Author: وحید خرازی
 
 شروع، کمی سخت است! شاید حتی بعضی وقت‌ها سخت‌تر از وسط و پایان. داشتم فکر می‌کردم که عنوان اولین پستِ بلاگِ یک محصولِ نرم‌افزاری چه باید باشد و اصلا، این اولِ بسم الله از چه چیزهایی باید گفت. رسمِ برنامه‌نویس‌ها و بلاگ‌های این شکلی معمولا این است که می‌نویسند «سلام دنیا!»، بعد هم می‌گویند چه کار می خواهند بکنند، هدفشان چیست، چه برنامه‌ای دارند و از این جور قصه‌ها. خُب ما هم ناچاریم از این حرف‌ها بزنیم.
