change english font

--- a/blog/content/1.in-the-name-of-god.md
+++ b/blog/content/1.in-the-name-of-god.md
@@ -12,7 +12,7 @@ Author: وحید خرازی
 
 کار میراد را از همان موقع‌ها شروع کردیم و سیستم را بر اساس چند پروژه‌ی دیگر که قبلا نوشته بودیم طراحی کردیم. کمی بعد‌تر هم شروع کردیم به توسعه‌دادن اپلیکیشن‌های موبایل و پیاده‌سازی جزییات. فعلا هم با چند منبع خوب و محدود که فکر می‌کردیم از بقیه بهترند شروع کردیم تا بعدا این منابع را اضافه کنیم. امیدوارم تا یکی دوماه آینده بتوانیم بیش‌تر از صد منبع را پوشش بدهیم.
 
-سلامِ میراد به دنیا، همین چند روز پیش بود که کارِ اپلیکیشن iOS میراد تمام شد و آن را روی استور اپل گذاشتیم(امیدواریم تا چند روز آینده اپل، اپلیکیشن میراد را از نظر فنی تایید کند تا روی فروشگاه اپل منتشر شود و احتمالا وقتی شما این مطلب را می‌خوانید روی استور قرار گرفته) و سایت میراد و این وبلاگ را ساختیم. فعلا هم، داریم سعی می‌کنیم روش‌هایمان برای انتخاب و شخصی‌سازی مطالب را بهبود بدهیم و نرم‌افزارهای بقیه پلتفرم ها را که تا جای نسبتا خوبی پیش‌رفته را کامل کنیم تا بتوانیم آن‌ها را هم منتشر کنیم.
+سلامِ میراد به دنیا، همین چند روز پیش بود که کارِ اپلیکیشن <span class="englishText">iOS</span> میراد تمام شد و آن را روی استور اپل گذاشتیم(امیدواریم تا چند روز آینده اپل، اپلیکیشن میراد را از نظر فنی تایید کند تا روی فروشگاه اپل منتشر شود و احتمالا وقتی شما این مطلب را می‌خوانید روی استور قرار گرفته) و سایت میراد و این وبلاگ را ساختیم. فعلا هم، داریم سعی می‌کنیم روش‌هایمان برای انتخاب و شخصی‌سازی مطالب را بهبود بدهیم و نرم‌افزارهای بقیه پلتفرم ها را که تا جای نسبتا خوبی پیش‌رفته را کامل کنیم تا بتوانیم آن‌ها را هم منتشر کنیم.
 
 در این‌جا که بلاگ میراد است قرار شده که هر اتفاقی که در حین توسعه‌ی میراد می‌افتد را بنویسیم، از مطالب کمی تخصصی‌تر که نحوه‌ی کار میراد را توضیح می‌دهد گرفته تا تصمیم‌هایی که می‌گیریم و اتفاق‌هایی که برای میراد می‌افتد. خُلاصه آن‌که، هر چیزی که را که فکر کنیم به اشتراک گذاشتنش به دردبخور است را حتما در این بلاگ می‌نویسیم. 
 
