--- a/blog/content/8.new-font.md
+++ b/blog/content/8.new-font.md
@@ -7,4 +7,4 @@ Author: آرین باقی
 با سلام،
 ما طی این چند روز که از معرفی میراد میگذرد تعداد زیادی نظرات خوب و پیشنهاد دریافت کردیم، یکی از آنها این بود که فونت مربوط به اخبار، مناسب خواندن نیست و در مطالعه ی طولانی مدت چشم را خسته میکند. پس ما تعدادی فونت جدید را در برنامه امتحان کردیم اما باز هم از نظر خود ما اشکال بر برنامه وارد بود. از جمله فونت هایی که استفاده کردیم می توان به BBCNassim و Yekan و Dinar و بسیاری دیگر اشاره کرد. در همین جست و جو ها برای فونت مناسب بودیم که فونت ایران را یافتیم، که به نظرمان بسیار مناسب بود و با لطف آقای مسلم ابراهیمی از این فونت فوق العاده زیبا و مناسب استفاده کردیم. در نسخه ۱.۱ که به زودی دوره تست اش تمام خواهد شد و به دست همه ی دوستان خواهد رسید، از این فونت استفاده شده. لطفا نظرات خود را با support@mirad.ir در میان بگذارید.
 امیدواریم فونت جدید رضایت همه شما را به همراه داشته باشد. جا دارد از دوست عزیز و خوبمان آقای مسلم ابراهیمی که لطف کردند و فونت ایران و چند فونت دیگر را به صورت رایگان در اختیار میراد گذاشتند تشکر کنیم. امیدواریم لایق این همه لطف باشیم.
-در مورد این فونت باید بگویم، فونی خوانا و مناسب است که در مطالعه ی طولانی مدت چشم را اذیت نمی کنید و به علت شکیل بودنش ظاهر برنماه را بهبود می بخشد. اگر شما هم مایل به استفاده از این فونت هستید می توانید به [سایت آقای مسلم ابراهیمی](http://www.moslemebrahimi.com) مراجعه فرمایید.
+در مورد این فونت باید بگویم، فونتی خوانا و مناسب است که در مطالعه ی طولانی مدت چشم را اذیت نمی کنید و به علت شکیل بودنش ظاهر برنماه را بهبود می بخشد. اگر شما هم مایل به استفاده از این فونت هستید می توانید به [سایت آقای مسلم ابراهیمی](http://www.moslemebrahimi.com) مراجعه فرمایید.
