--- a/blog/content/11.new-sources.md
+++ b/blog/content/11.new-sources.md
@@ -1,32 +1,34 @@
 Title: ۲۰ منبع جدید به میراد اضافه شد
 Date: 2014-08-29 20:10
 Category: General
-img: http://blog.mirad.ir/img/toranjiLogo.png
+img: http://blog.mirad.ir/img/new-sources.jpg
 Author: وحید خرازی
 
 
-میراد،‌ وقتی که منتشر شد حدودا ان منبع خبری را پوشش می‌داد. خب این با چیزی که اول مد نظر ما بود و هست فاصله‌ی زیادی داشت بنابراین در این یکی دوهفته‌ی اخیر تلاش کردیم چند منبع خبری جدید را اضافه کنیم. تلاش شد که منابع خبری که اضافه می‌شوند تنوع موضوعی داشته باشند تا تعداد خبرها در همه‌ی موضوع‌ها بیشتر شود. منابعی که در این دو هفته جدید اضافه شدند این‌ها بودند:
+میراد،‌ وقتی که منتشر شد منابع محدودی را پوشش می‌داد. خب این با چیزی که اول مد نظر ما بود و هست فاصله‌ی زیادی داشت بنابراین در این یکی دوهفته‌ی اخیر تلاش کردیم چند منبع خبری جدید را اضافه کنیم. تلاش شد که منابع جدیدی که اضافه می‌شوند تنوع موضوعی داشته باشند و البته بیشتر در موضوعاتی باشند که تعداد مطالب آن کم است.
 
-- دیجیاتو
-- خبرگزاری سیتنا
-- ایتنا
+منابعی که در این دو هفته جدید اضافه شدند این‌ها بودند:
+
+- دیجیاتو(اخبار بروز تکنولوژی)
+- خبرگزاری سیتنا(اخبار فناوری اطلاعات)
+- ایتنا(اخبار فناوری اطلاعات)
 - هنر نیوز
-- مجله ماشین
-۰ برترین ها 
-- شفا نیوز
-- مجله لحظه نما
-- موسیقی ما
+- مجله ماشین(سایت رسمی مجله‌ ماشین)
+۰ برترین ها
+- شفانیوز
+- مجله لحظه‌نما
+- موسیقی‌ما
 - وبسوار 
-- ایبنا
-- بهار نیوز
-- عصر ایران
-- دکتر من
-- خبر نو 
-- شفا آنلاین
-- زیست بوم
+- خبرگزاری کتاب(ایبنا)
+- بهار‌نیوز
+- عصر‌ایران
+- دکتر‌من
+- خبر‌نو 
+- شفا‌آنلاین
+- زیست‌بوم(سایتی که اخبار محیط زیست را منتشر می‌کند)
 - سلامت نیوز
 - نو اندیش
 - عصر خودرو
 - کافه سینما
 
-با اضافه شدن این بیست خبرگزاری جدید،‌ تقریبا تعداد خبرهایی که هر روز در نرم افزار می‌آیند نسبت به قبل حدودا دو برابر شده است. امیدواریم در آینده نزدیک به حدود صد منبع خبری برسیم البته چیزی که مهم‌تر از تعداد منابع است،‌ کیفیت مطالب این سایت‌هاست. شما هم اگر سایتی را می‌شناسید که به نظرتان باید آن را اضافه کنید حتما به ما معرفی کنید.
+با اضافه شدن این بیست خبرگزاری جدید،‌ تقریبا تعداد خبرهایی که هر روز در نرم افزار می‌آیند نسبت به قبل حدودا دو برابر شده است. امیدواریم در آینده نزدیک به حدود صد منبع خبری برسیم البته چیزی که مهم‌تر از تعداد منابع است،‌ کیفیت مطالب این سایت‌هاست. شما هم اگر سایتی را می‌شناسید که به نظرتان باید آن را اضافه کنیم حتما به ما معرفی کنید.
