Add sibche post

--- a/blog/content/16.release-ios-v.2.md
+++ b/blog/content/16.release-ios-v.2.md
@@ -1,6 +1,6 @@
 Title:  نسخه‌ی ۲ میراد برای آی‌او‌اس
 Date: 2014-10-31 12:20
-Category: General, iOS, update
+Category: General
 img: http://blog.mirad.ir/img/update.png
 Author: آرین باقی
 
