--- a/blog/content/19.bug-in-ios2.2.md
+++ b/blog/content/19.bug-in-ios2.2.md
@@ -1,4 +1,4 @@
-Title: گزارش یک اشکال در نخسه iOS
+Title: گزارش یک اشکال در نسخه iOS
 Date: 2014-12-22 13:10
 Category: General
 img: http://blog.mirad.ir/img/bug.png
