--- a/blog/content/21.release-web-beta.md
+++ b/blog/content/21.release-web-beta.md
@@ -1,6 +1,6 @@
 Title: نسخه آزمایشی وب
 Date: 2014-12-23 17:00
-Category: General, Release, Web
+Category: General
 img: http://blog.mirad.ir/img/rsz_modern-browsers.png
 Author: سینا محمودی
 
