--- a/blog/content/26.release-android-v.2.1.md
+++ b/blog/content/26.release-android-v.2.1.md
@@ -4,4 +4,4 @@ Category: General, iOS, update
 img: http://blog.mirad.ir/img/android2.1.jpg
 Author: امیر آجورلو
 
-نسخه ۲.۱ اندروید با قابلیت های بیشتر نسبت به نسخه قبلی در کافه بازار قرار داده شد.در این نسخه با اضافه شدن push notification،مطالب پربازدید به صورت گشوزد ارسال می‌شوند.همیچنین با اضافه شدن خلاصه خبر،با استفاده از برنامه موجز که در پست های قبلی معرفی شد،می‌توانید مطلاب را به صورت خلاصه و سریعتر مطالعه بفرمایید.مشکل برخی از دستگاه های Samsung Galaxy S4 در نسخه جدید نیز رفع شده است.در قسمت دسته بندی ها نیز قسمتی با عنوان "اخبار برگزیده" قرار داده شده است که مطلاب برگزیده روز را شامل می‌شود.همچنین برای خوانایی بیشتر فونت مطالب تغییر کرده است.منتظر نظرات شما هستیم.
+نسخه ۲.۱ اندروید با قابلیت های بیشتر نسبت به نسخه قبلی در کافه بازار قرار داده شد. در این نسخه با اضافه شدن پوش نوتیفیکیشن، مطالب پراهمیت به صورت گوشزد ارسال می‌‌شوند. همیچنین با اضافه شدن خلاصه خبر، با استفاده از برنامه خلاصه‌ساز که در پست های قبلی معرفی شد، می‌توانید مطلاب را به صورت خلاصه و سریعتر مطالعه بفرمایید. مشکل برخی از دستگاه های Samsung Galaxy S4 در نسخه جدید نیز رفع شده است. در قسمت دسته بندی ها نیز قسمتی با عنوان «اخبار برگزیده» قرار داده شده است که مطلاب برگزیده روز را شامل می‌‌شود. همچنین برای خوانایی بیشتر فونت مطالب تغییر کرده است. منتظر نظرات شما هستیم.
